--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
 MarkupSafe==2.1.1
+mypy==0.942
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.5.2
